[build-system]
# Minimum requirements for the build system to execute.
requires = [
  "setuptools",
  "wheel",
  "pyarrow==0.17; python_version=='2.7'",
  "pyarrow>=1.0.0; python_version>='3.7'",
  "pandas==0.24.2; python_version=='2.7'",
  "pandas>=1.1; python_version>='3.7'",
  "numpy==1.16.6; python_version=='2.7'",
  "numpy>=1.19.1; python_version>='3.7'",
  "numexpr==2.7.3; python_version=='2.7'",
  "numexpr>=2.7.3; python_version>='3.7'",
]

[tool.black]
target-version = ['py27', 'py37', 'py38', 'py39']
exclude = '''
(
  | \.egg
  | \.git
  | build
  | setup.py
)
'''
