[build-system]
# Minimum requirements for the build system to execute.
requires = [
  "setuptools",
  "wheel",
  "pyarrow>=22.0.0",
]

[tool.black]
target-version = ['py311', 'py312', 'py313', 'py314']
exclude = '''
(
  | \.egg
  | \.git
  | build
  | setup.py
)
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true

# Handle optional dependencies and PyArrow
[[tool.mypy.overrides]]
module = ["pandas.*", "numpy.*", "polars.*", "duckdb.*", "pyarrow.*"]
ignore_missing_imports = true
